# syntetic-data-generator

./: .gitignore  .how-to  README.md  config.template.yaml  custom_config.yaml  prompt_template.txt  pyproject.toml
data/cleaned/: quantum-roadmap_qa_pairs_cleaned.json
data/final/: quantum-roadmap_qa_pairs_cleaned_ft.json
data/final/quantum-roadmap_qa_pairs_cleaned_ft_hf/: data-00000-of-00001.arrow  state.json
data/output/: quantum-roadmap.txt
