[project]
name = "syntetic-data-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Olikh",email = "Igor.Olikh@ibm.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
