[project]
name = "syntetic-data-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Olikh",email = "Igor.Olikh@ibm.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "synthetic-data-kit==0.0.4b2",
    "poetry-core (>=2.1.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
